argocd/hiae/prd/manifests/apps/room-dash-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "121"
  creationTimestamp: "2023-12-07T02:38:33Z"
  generation: 125
  labels:
    app: room-dash-app-apps
  name: room-dash-app-apps
  namespace: apps-room-dash
  resourceVersion: "425976582"
  uid: 1fc2679c-6a3a-4603-b450-97485d00d569
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: room-dash-app-apps
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: room-dash-app-apps
    spec:
      containers:
      - image: docker.io/devopsfaith/krakend:2.5
        imagePullPolicy: IfNotPresent
        name: room-dash-app-gw
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/krakend/krakend.json
          name: room-dash-app
          readOnly: true
          subPath: krakend.json
      - env:
        - name: PORT
          value: "3000"
        - name: JWKS_URI
          value: https://auth.hoobox.one/realms/hoobox/protocol/openid-connect/certs
        - name: APP_VSN
          value: df79ef
        - name: DB_CA_CERT_PATH
          value: /etc/configmap/ca-certificate.pem
        image: 264221247403.dkr.ecr.sa-east-1.amazonaws.com/room-dash-app:df79ef
        imagePullPolicy: IfNotPresent
        name: room-dash-app-app
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/configmap
          name: room-dash-app
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: room-dash-app
        name: room-dash-app
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-08-09T02:23:12Z"
    lastUpdateTime: "2025-08-09T02:23:12Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-02-02T13:40:49Z"
    lastUpdateTime: "2026-05-27T18:08:54Z"
    message: ReplicaSet "room-dash-app-apps-788dd6694c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 125
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
