argocd/hiae/prd/manifests/apps/room-dash-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: room-dash-app
  namespace: apps-room-dash
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: room-dash-app
