argocd/hiae/prd/manifests/apps/room-dash-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: room-dash-app
  namespace: apps-room-dash
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
spec:
  tls:
    - hosts:
        - app.room-hoobox.einstein.br
      secretName: room-dash-app-tls
  rules:
  - host: app.room-hoobox.einstein.br
    http:
      paths:
      - backend:
          service:
            name: room-dash-app
            port:
              number: 80
        path: /
        pathType: Prefix
